# xgboost-scratch

./: Makefile  README.md  requirements.txt
Trees/: README.md  pyproject.toml  requirements.txt
Trees/TreesFromScratch/: __init__.py  dataset.py
Trees/TreesFromScratch/modeling/: tree.py  xgb2.py  xgboost.py
Trees/docs/: mkdocs.yml
TreesFromScratch/: dataset.py  features.py  pipeline.py  plots.py
TreesFromScratch/modeling/: evaluate.py  predict.py  train.py  tree.py  xgb.py
docs/docs/: index.md
models/: model.pkl
