[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "TreesFromScratch"
version = "0.0.1"
description = "Building multiple types of gradient-boosted trees from scratch on simple datasets for classification and regression"
authors = [
  { name = "Alex Oh" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["TreesFromScratch"]
force_sort_within_sections = true
